# GeoChallenge-Tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  API_ROUTES.md  CONTRIBUTING.fr.md  CONTRIBUTING.md  FEATURES.md  README.fr.md  README.md  README_STRUCTURE.md  TECHNOLOGIES.md  build.sh  codecov.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  mypy.ini  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  test_osm_headers.sh  tsconfig.json  vite.config.ts  vitest.config.ts
backend/: .coverage  .coveragerc  Dockerfile  README.fr.md  README.md  generate_secret.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: backup_config.py  bson_utils.py  config_backup.py  (+9 more)
backend/config/: geo_sources.yml
backend/scripts/: README.md  assign_zones.py  download_geo_data.py  duplicate_db_for_tests.py  seed_zones.py
backend/tests/: _test_progress.py  _test_targets_smoke.py  _test_user_challenge_tasks_suite.py  _test_user_challenge_tasks_verbose.py  conftest.py  test_auth.py  test_calendar_verification.py  test_challenge_autocreate.py  test_connectivity.py  test_email_verification.py  test_matrix_verification.py  test_my_challenges_routes.py  test_progress.py  test_settings.py  test_targets_routes.py  test_targets_service_multi.py  test_targets_service_uc.py  test_targets_smoke.py  test_upload_gpx.py  test_user_auth_db.py  test_user_challenge_tasks_suite.py  test_user_challenge_tasks_verbose.py  test_user_challenges_counts.py
(+356 files in other folders)
