[project]
name = "geochallenge-backend"
version = "0.1.0"

[build-system]
requires = ["uv"]
build-backend = "uv.build"

[tool.mypy]
python_version = "3.11"
show_error_context = true
show_column_numbers = true
strict_optional = true

[[tool.mypy.overrides]]
module = "selectolax.*"
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
