[project]
name = "geochallenge-backend"
version = "0.1.0"

[build-system]
requires = ["uv"]
build-backend = "uv.build"

[tool.mypy]
python_version = "3.11"
show_error_context = true
show_column_numbers = true
strict_optional = true
plugins = ["pydantic.mypy"]
exclude = ["test-scripts/"]

[[tool.mypy.overrides]]
module = "selectolax.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
